Major refactoring after meeting 5/10/17. So far passing simulation unit tests again.

--- a/vignettes/Example1.Rmd
+++ b/vignettes/Example1.Rmd
@@ -1,8 +1,27 @@
-## ------------------------------------------------------------------------
+---
+title: "pEC Example1"
+author: "Bill C. White"
+date: "`r Sys.Date()`"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{pEC Example1}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
+---
+
+# Privacy preserving Evaporative Cooling feature selection and classification with Relief-F and Random Forests
+
+Methods are described in the following publication.
+
+Trang Le, W. K. Simmons, M. Misaki, B.C. White, J. Savitz, J. Bodurka, and B. A. McKinney. “Privacy preserving evaporative cooling feature selection and classification with Relief-F and Random Forests,” Bioinformatics. Accepted. [Bioinformatics Abstract](https://doi.org/10.1093/bioinformatics/btx298). 2017.
+
+## Example Run and Results
+
+```{r}
 library(privateEC)
 update.freq <- 10
 num.samples <- 100
-num.variables <- 500
+num.variables <- 100
 prob.bias <- 0.1
 nbias <- prob.bias * num.variables
 signals <- sprintf("gene%04d", 1:nbias)
@@ -16,12 +35,14 @@ pec.results <- privateEC(data.sets=sim.data,
                          signal.names=signals, 
                          verbose=FALSE, 
                          update.freq=update.freq)
+```
 
-## ---- echo=FALSE---------------------------------------------------------
+```{r, echo=FALSE}
 knitr::kable(pec.results$plots.data, caption="Algorithm Iterations",
              row.names=FALSE, digits=3)
+```
 
-## ---- echo=FALSE, fig.width=14, fig.width=7, fig.align='center'----------
+```{r, echo=FALSE, fig.width=14, fig.width=7, fig.align='center'}
 # library(ggplot2)
 # ggplot(pec.results$melted.data, aes(x=num.atts, y=value, colour=variable)) +
 #   geom_point(size=1) + geom_line()
@@ -38,4 +59,4 @@ points(pec.results$plots.data$num.atts,
        pec.results$plots.data$ftest, 
        col="blue", pch=4, type='b', cex=0.75)
 legend("topright", c("Train", "Holdout", "Test"), pch=c(16, 1, 4), col=c("red", "green", "blue"), cex=0.75)
-
+```
