--- a/vignettes/Example1.Rmd
+++ b/vignettes/Example1.Rmd
@@ -20,7 +20,6 @@ Trang Le, W. K. Simmons, M. Misaki, B.C. White, J. Savitz, J. Bodurka, and B. A.
 
 ```{r}
 library(privateEC)
-myrun <- "001"
 n <- 100
 num.vars <- 100
 bias <- 0.4
@@ -28,30 +27,25 @@ type <- "mainEffect"
 pct.signals <- 0.1
 update.freq <- 5
 verbose <- FALSE
-shortname <- "Example1"
 
 data.sets <- createSimulation(n=n,
                               num.vars=num.vars,
                               pct.signals=pct.signals,
                               bias=bias,
-                              shortname=shortname,
                               sim.type=type,
-                              myrun=myrun,
-                              verbose=verbose,
-                              save.file=FALSE)
+                              save.file=NULL,
+                              verbose=verbose)
 
 pec.result <- privateEC(train.ds=data.sets$train,
                         holdout.ds=data.sets$holdout,
                         validation.ds=data.sets$validation,
                         label=data.sets$class.label,
                         is.simulated=TRUE,
-                        shortname=shortname,
                         bias=bias,
-                        myrun=myrun,
                         update.freq=update.freq,
                         save.file=NULL,
-                        verbose=verbose,
-                        signal.names=data.sets$signal.names)
+                        signal.names=data.sets$signal.names,
+                        verbose=verbose)
 ```
 
 ```{r, echo=FALSE}
