--- a/vignettes/Example1.Rmd
+++ b/vignettes/Example1.Rmd
@@ -3,9 +3,8 @@ title: "Example1"
 author: "Bill C. White"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
-  
 vignette: >
-  %\VignetteIndexEntry{Example1}
+  %\VignetteIndexEntry{Introduction to the WaterML R package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
