--- a/vignettes/RealDataExample.Rmd
+++ b/vignettes/RealDataExample.Rmd
@@ -3,9 +3,8 @@ title: "Real Data Example"
 author: "Bill C. White"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
-  
 vignette: >
-  %\VignetteIndexEntry{Real Data Example}
+  %\VignetteIndexEntry{Introduction to the WaterML R package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
