--- a/inst/doc/RealDataExample.Rmd
+++ b/inst/doc/RealDataExample.Rmd
@@ -26,11 +26,11 @@ real.data.sets <- splitDataset(all.data = rsfMRIcorrMDD[, (data.width - 101):dat
                                pct.train = 0.5,
                                pct.holdout = 0.5,
                                pct.validation = 0,
-                               class.label = "phenos")
+                               label = "class")
 real.result <- privateEC(train.ds = real.data.sets$train,
                          holdout.ds = real.data.sets$holdout,
                          validation.ds = NULL,
-                         label = "phenos",
+                         label = "class",
                          is.simulated = FALSE,
                          update.freq = 5,
                          verbose = FALSE)
