--- a/examples/pec_examples.Rmd
+++ b/examples/pec_examples.Rmd
@@ -2,11 +2,9 @@
 title: "pEC_nCV_Vignette"
 author: Saeid Parvandeh
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Example1}
-  %\VignetteEncoding{UTF-8}
+output:
+  github_document:
+  keep_md: yes
 ---
 ## Privacy preserving Evaporative Cooling (PrivateEC), Consensus Nested Cross Validation (cnCV), and Regular Nested Cross Validation (rnCV) for feature selection and classification with Relief-F and Random Forests
 
@@ -14,8 +12,6 @@ PrivateEC methods are described in the following publication.
 
 Trang T. Le, W. K. Simmons, M. Misaki, B.C. White, J. Savitz, J. Bodurka, and B. A. McKinney. "Differential privacy-based evaporative cooling feature selection and classification with Relief-F and Random Forests," <i>Bioinformatics</i>, Volume 33, Issue 18, 15 September 2017, Pages 2906–2913. [free](https://academic.oup.com/bioinformatics/article/33/18/2906/3796394/Differential-privacybased-evaporative-cooling?guestAccessKey=b91832c8-6034-46d5-95ce-382fc71c1df0)
 
-
-Consensus nested cross validation (cnCV) is a new method ...
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
@@ -25,21 +21,17 @@ knitr::opts_chunk$set(
 library(privateEC)
 ```
 
-## Example Run and Results
+## Simulation example comparing private Evaporative Cooling (pEC) with standard nested cross-validation (nCV) and a new consensus-feature nested cross validation (cnCV)
 
-### Simulate Balanced Data
+### Simulate Balanced Case-Control Data with Numeric Predictors with Main Effects
 ```{r, message=FALSE}
 library(privateEC)
-n.samples <- 100
-n.variables <- 100
+n.samples <- 300     # 100 samples in train/holdout/test
+n.variables <- 100   # 100 features
 label <- "class"
-type <- "mainEffect"
-#importance.algorithm <- "ReliefFbestK"
-importance.algorithm <- "ReliefFequalK"
-bias <- 0.4
-pct.signals <- 0.1
-update.freq <- 5
-num_tree <- 500
+type <- "mainEffect" # main effect simulatios
+bias <- 0.6          # moderate effect size
+pct.signals <- 0.1   # pct functional features
 verbose <- FALSE
 
 data.sets <- createSimulation(num.samples = n.samples,
@@ -47,35 +39,41 @@ data.sets <- createSimulation(num.samples = n.samples,
                               pct.signals = pct.signals,
                               label = label,
                               bias = bias,
-                              pct.train = 0.5,
-                              pct.holdout = 0.5,
-                              pct.validation = 0,
+                              pct.train = 1/3,
+                              pct.holdout = 1/3,
+                              pct.validation = 1/3,
                               sim.type = type,
                               save.file = NULL,
                               verbose = verbose)
 ```
 
-### Run pEC on balanced simulated data
+### Run pEC on simulated data
 
 ```{r, message=FALSE}
-pec.result <- privateEC(train.ds = data.sets$train,
-                        holdout.ds = data.sets$holdout,
-                        validation.ds = data.sets$validation,
-                        label = data.sets$label,
-                        importance.algorithm = importance.algorithm,
-                        rf.ntree = num_tree,
-                        is.simulated = TRUE,
-                        bias = bias,
-                        update.freq = update.freq,
-                        save.file = NULL,
-                        signal.names = data.sets$signal.names,
+update.freq <- 5   # attributes evaporated per iteration
+num_tree <- 500
+importance.algorithm <- "ReliefFequalK"
+
+pec.result <- privateEC(train.ds = data.sets$train,                   # training split
+                        holdout.ds = data.sets$holdout,               # holdout split
+                        validation.ds = data.sets$validation,         # independent validation set
+                        label = data.sets$label,                      # class label
+                        importance.algorithm = importance.algorithm,  # feature selection method (ReliefF)
+                        relief.k.method = "k_half_sigma",             # ReliefF nearest neighbor k estimate
+                        rf.ntree = num_tree,                          # random forest classifier
+                        is.simulated = TRUE,                          # indicates there will be a validation set
+                        bias = bias,                                  # pEC privacy temperature noise
+                        update.freq = update.freq,                    # number of attributes to evaporate per step
+                        save.file = NULL,                             # save results
+                        signal.names = data.sets$signal.names,        # functional variable names
+                        use.nestedCV = F,
                         verbose = verbose)
 ```
 
 ### pEC results
 #### Table of iterations
 ```{r, echo=FALSE}
-knitr::kable(pec.result$algo.acc, caption = "Algorithm Iterations",
+knitr::kable(pec.result$algo.acc, caption = "Evaporation Iterations",
              row.names = FALSE, digits = 3)
 ```
 
@@ -85,7 +83,10 @@ plotRunResults(pec.result)
 ```
 
 #### pEC selected features
-```{r, echo=FALSE}
+```{r, echo=T}
+cat("\n Max Holdout Accuracy Step [",which.max(pec.result$algo.acc$holdout.acc),"]\n")
+cat("\n Accuracies: ")
+print(pec.result$algo.acc[which.max(pec.result$algo.acc$holdout.acc),])
 cat("\n Selected Features \n [",pec.result$atts.remain[[which.max(pec.result$algo.acc$holdout.acc)]],"]\n")
 ```
 
@@ -105,7 +106,7 @@ rncv_result <- regular_nestedCV(train.ds = data.sets$train,
 ```
 
 ### rnCV results
-```{r, message=FALSE, echo=FALSE}
+```{r, message=FALSE, echo=T}
 cat("\n Train Accuracy [",rncv_result$Train,"]\n")
 cat("\n Validation Accuracy [",rncv_result$Validation,"]\n")
 cat("\n Selected Features \n [",rncv_result$Features,"]\n")
@@ -128,7 +129,7 @@ cncv_result <- consensus_nestedCV(train.ds = data.sets$train,
 
 ### cnCV results
 
-```{r, echo=FALSE}
+```{r, echo=T}
 cat("\n Train Accuracy [",cncv_result$Train,"]\n")
 cat("\n Validation Accuracy [",cncv_result$Validation,"]\n")
 cat("\n Selected Features \n [",cncv_result$Features,"]\n")
@@ -155,9 +156,9 @@ data.sets <- createSimulation(num.samples = n.samples,
                               label = label,
                               pct.imbalance = pct.imbalance,
                               bias = bias,
-                              pct.train = 0.5,
-                              pct.holdout = 0.5,
-                              pct.validation = 0,
+                              pct.train = 1/3,
+                              pct.holdout = 1/3,
+                              pct.validation = 1/3,
                               sim.type = type,
                               save.file = NULL,
                               verbose = verbose)
@@ -266,9 +267,9 @@ data.sets <- createMixedSimulation(num.samples = n.samples,
                                    pct.mixed = pct.mixed,
                                    mixed.type = mixed.type,
                                    bias = bias,
-                                   pct.train = 0.5,
-                                   pct.holdout = 0.5,
-                                   pct.validation = 0,
+                                   pct.train = 1/3,
+                                   pct.holdout = 1/3,
+                                   pct.validation = 1/3,
                                    save.file = NULL,
                                    verbose = verbose)
 ```
@@ -371,9 +372,9 @@ data.sets <- createSimulation(num.samples = n.samples,
                               pct.signals = pct.signals,
                               label = label,
                               bias = bias,
-                              pct.train = 0.5,
-                              pct.holdout = 0.5,
-                              pct.validation = 0,
+                              pct.train = 1/3,
+                              pct.holdout = 1/3,
+                              pct.validation = 1/3,
                               sim.type = type,
                               save.file = NULL,
                               verbose = verbose)
