--- a/vignettes/RealDataExample.Rmd
+++ b/vignettes/RealDataExample.Rmd
@@ -27,22 +27,34 @@ real.data.sets <- splitDataset(all.data = rsfMRIcorrMDD[, (data.width - 101):dat
                                pct.holdout = 0.5,
                                pct.validation = 0,
                                label = "class")
-real.result <- privateEC(train.ds = real.data.sets$train,
+pec.result <- privateEC(train.ds = real.data.sets$train,
                          holdout.ds = real.data.sets$holdout,
                          validation.ds = NULL,
                          label = "class",
                          is.simulated = FALSE,
+                         importance.algorithm = "ReliefFequalK",  # ReliefF
+                         relief.k.method = "k_half_sigma",        # ReliefF knn
                          update.freq = 5,
                          verbose = FALSE)
 ```
 
 ```{r, echo=FALSE}
-knitr::kable(real.result$algo.acc, 
+knitr::kable(pec.result$algo.acc, 
              caption = "Algorithm Iterations",
              row.names = FALSE, 
              digits = 3)
 ```
 
 ```{r, echo=FALSE, fig.width=7, fig.width=7, fig.align='center'}
-plotRunResults(real.result)
+plotRunResults(pec.result)
+```
+
+#### pEC selected features
+```{r, echo=T}
+multiple.max.indices <- which(pec.result$algo.acc$holdout.acc==max(pec.result$algo.acc$holdout.acc))
+last.max <- multiple.max.indices[length(multiple.max.indices)]
+cat("\n Max Holdout Accuracy Step [",last.max,"]\n")
+cat("\n Accuracies: ")
+print(pec.result$algo.acc[last.max,])
+cat("\n Selected Features \n [",pec.result$atts.remain[[last.max]],"]\n")
 ```
